syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/odpf/raccoon/clients/go/grpc";

message PageEvent {
    string event_guid = 1;
    string event_name = 2;
    google.protobuf.Timestamp sent_time = 3;
}